--- a/ulp-blink/.vscode/launch.json
+++ b/ulp-blink/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Source/ulp-blink/.pio/build/esp32 dev/firmware.elf",
+            "executable": "c:/Source/esp-platformio-ulp/ulp-blink/.pio/build/esp32 dev/firmware.elf",
             "toolchainBinDir": "C:/Users/xxsha/.platformio/packages/toolchain-xtensa32/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -24,7 +24,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Source/ulp-blink/.pio/build/esp32 dev/firmware.elf",
+            "executable": "c:/Source/esp-platformio-ulp/ulp-blink/.pio/build/esp32 dev/firmware.elf",
             "toolchainBinDir": "C:/Users/xxsha/.platformio/packages/toolchain-xtensa32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
