weekend of messin -- am sending 2 bytes, and compiling some C into asm

--- a/ulp-spi/.vscode/settings.json
+++ b/ulp-spi/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "rtc_io.h": "c",
         "gpio.h": "c",
-        "ulp.h": "c"
+        "ulp.h": "c",
+        "freertos.h": "c"
     }
 }
