working! sending init string from array to SPI bitbang ULP

--- a/ulp-spi/platformio.ini
+++ b/ulp-spi/platformio.ini
@@ -7,10 +7,17 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:esp32 dev]
+; [env:pre_and_post_hooks]
+
+[env:latest_stable]
 platform = espressif32
 framework = espidf
 board = lolin32
+
+; extra_scripts = pre:compile_ulpcc.py
+board_build.f_cpu = 80000000L
+board_build.f_flash = 80000000L
+build_flags = -DCORE_DEBUG_LEVEL=5
 
 upload_port = COM6
 monitor_port = COM6
