--- a/ulp-spi/platformio.ini
+++ b/ulp-spi/platformio.ini
@@ -14,7 +14,7 @@ platform = espressif32
 framework = espidf
 board = lolin32
 
-; extra_scripts = pre:compile_ulpcc.py
+extra_scripts = pre:compile_ulpcc.py
 board_build.f_cpu = 80000000L
 board_build.f_flash = 80000000L
 build_flags = -DCORE_DEBUG_LEVEL=5
