--- a/ulp-spi/.vscode/launch.json
+++ b/ulp-spi/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Source/esp-platformio-ulp/ulp-spi/.pio/build/latest_stable/firmware.elf",
-            "toolchainBinDir": "C:/Users/xxsha/.platformio/packages/toolchain-xtensa32/bin",
+            "executable": "F:/Source/ulp/esp-platformio-ulp/ulp-spi/.pio/build/latest_stable/firmware.elf",
+            "toolchainBinDir": "C:/Users/amun/.platformio/packages/toolchain-xtensa32/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
@@ -24,8 +24,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Source/esp-platformio-ulp/ulp-spi/.pio/build/latest_stable/firmware.elf",
-            "toolchainBinDir": "C:/Users/xxsha/.platformio/packages/toolchain-xtensa32/bin",
+            "executable": "F:/Source/ulp/esp-platformio-ulp/ulp-spi/.pio/build/latest_stable/firmware.elf",
+            "toolchainBinDir": "C:/Users/amun/.platformio/packages/toolchain-xtensa32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
     ]
