--- a/ulp-spi/platformio.ini
+++ b/ulp-spi/platformio.ini
@@ -7,7 +7,8 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-; [env:pre_and_post_hooks]
+[extra]
+MyCOM = COM8
 
 [env:latest_stable]
 platform = espressif32
@@ -19,6 +20,6 @@ board_build.f_cpu = 80000000L
 board_build.f_flash = 80000000L
 build_flags = -DCORE_DEBUG_LEVEL=5
 
-upload_port = COM6
-monitor_port = COM6
+upload_port = ${extra.MyCOM}
+monitor_port = ${extra.MyCOM}
 monitor_speed = 115200
